[package]
name = "inku"
version = "0.4.0"
authors = ["Odin Dutton <odindutton@gmail.com>"]
edition = "2018"
description = "An RGBA color backed by a `u32` for simple color manipulation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/twe4ked/inku"
readme = "README.md"
keywords = ["color", "u32", "rgb", "rgba"]
categories = ["graphics"]

[dependencies]
crossterm = { version = "0.20.0", optional = true }

[dev-dependencies]
crossterm = "0.20.0"
